[package]
name = "tlint"
version = "0.9.2"
edition = "2021"

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
colored = "2"
jsonschema = "0.16.1"
yaml-rust = "0.4"
rhai = { version = "1.13.0", features = ["internals"] }
serde = {version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = "1.0.87"
