[package]
name = "tlint"
version = "0.9.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
colored = "2"
jsonschema = "0.16.1"
yaml-rust = "0.4"
rhai = { version = "1.13.0", features = ["internals"] }
serde = {version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = "1.0.87"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
